# vki

./: .azure-pipelines.yml  .gitattributes  .gitignore  .rustfmt.toml  Cargo.lock.old  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  compile_shaders.sh  notes.txt  rustfmt.toml  vk_layer_settings.txt
.github/workflows/: build-and-test.yml  build.yml  ci-build-and-test.yml  test.yml
ci/: azure-install-glfw-deps-ubuntu-16.yml  azure-install-rust.yml  azure-test-all.yml
examples/: README.md  adapters.rs  cube.rs  cube_texture.rs  gltf_viewer.rs  particle_simulator.rs  shift.rs  swapchain.rs  swapchain_smooth_resize.rs  triangle.rs  triangle_multisample.rs
examples/shaders/: cube.frag.glsl  cube.frag.spv  cube.vert.glsl  cube.vert.spv  cube_texture.frag.glsl  cube_texture.frag.spv  cube_texture.vert.glsl  cube_texture.vert.spv  gltf_viewer.frag.glsl  gltf_viewer.frag.spv  gltf_viewer.vert.glsl  gltf_viewer.vert.spv  particle_simulator.comp.glsl  particle_simulator.comp.spv  particle_simulator.frag.glsl  particle_simulator.frag.spv  particle_simulator.vert.glsl  particle_simulator.vert.spv  triangle.frag.glsl  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
examples/util/: mod.rs  shape.rs
src/: error.rs  lib.rs  macros.rs
src/imp/: adapter.rs  binding.rs  buffer.rs  command.rs  command_buffer.rs  command_encoder.rs  convert.rs  cookbook.rs  debug.rs  device.rs  fence.rs  fenced_deleter.rs  instance.rs  mod.rs  pass_resource_usage.rs  pipeline.rs  polyfill.rs  queue.rs  render_pass.rs  renderpass.rs  sampler.rs  serial.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  util.rs  vec.rs
tests/: binding.rs  buffer.rs  command_buffer.rs  command_encoder.rs  fence.rs  instance.rs  pipeline.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  texture.rs
tests/data/: command_buffer.1.comp.spv  pipeline.comp.glsl
tests/shaders/: command_buffer.copy_buffer_with_compute_shader.comp.glsl  command_buffer.push_constants.comp.glsl  command_buffer.push_constants.comp.spv  compile.sh  pipeline.comp.spv  pipeline.frag.glsl  pipeline.frag.spv  pipeline.set_bind_group.comp.glsl  pipeline.set_bind_group.comp.spv  pipeline.vert.glsl  pipeline.vert.spv  shader.vert.glsl  shader.vert.spv
tests/support/: mod.rs
