[package]
name = "vki"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
ash = "0.29.0"
vk-mem = "0.1.7"
lazy_static = "1.3.0"
libc = "0.2.50"
parking_lot = "0.8.0"
bitflags = "1.0.4"
log = "0.4.6"
smallvec = "0.6"
backtrace = "0.3"

[features]
default = ["winit-eventloop-2"]
winit-eventloop-2 = [] # configures the winit_surface_descriptor macro

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "6d7e4bf" }
# vk-mem = { path = "../vk-mem-rs" }

[dev-dependencies]
pretty_env_logger = "0.3.0"
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "07356b9" } # branch = "eventloop-2.0"
# winit = { path = "../winit" }
num-traits = "0.2.6"
cgmath = "0.17.0"
image = "0.21.1"
rand = "0.6.5" # note: only used directly by the particle simulator

gltf = { version  = "0.12", features = ["utils", "import", "names"] }
