[package]
name = "vki"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
ash = "0.29.0"
vk-mem = { version = "0.1.8", default-features = false }
lazy_static = "1.3.0"
libc = "0.2.60"
parking_lot = "0.9.0"
bitflags = "1.0.4"
log = "0.4.8"
smallvec = "0.6.10"
backtrace = "0.3.33"
raw-window-handle = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18.4"
objc = "0.2.6"

[features]
default = ["winit-eventloop-2"]
winit-eventloop-2 = [] # configures the winit_surface_descriptor macro

#[patch.crates-io]
#ash = { git = "https://github.com/MaikKlein/ash.git", rev = "6d7e4bf" }
# vk-mem = { path = "../vk-mem-rs" }

[dev-dependencies]
pretty_env_logger = "0.3.0"
#winit = { git = "https://github.com/rust-windowing/winit.git", rev = "0636483" } # branch = "eventloop-2.0"
winit = "0.20.0-alpha3"
# winit = { path = "../winit" }
glfw = "0.33.0"
num-traits = "0.2.6"
cgmath = "0.17.0"
image = "0.21.1"
rand = "0.6.5" # note: only used directly by the particle simulator
memoffset = "0.5.1"
gltf = { version  = "0.13", features = ["utils", "import", "names"] }
