[package]
name = "vki"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
ash = "0.31.0"
vk-mem = { version = "0.2.2", default-features = false }
lazy_static = "1.4.0"
libc = "0.2.68"
parking_lot = "0.10"
bitflags = "1.2.1"
log = "0.4.8"
smallvec = "1.2.0"
backtrace = "0.3.46"
raw-window-handle = "0.3"
ahash = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
objc = "0.2.7"

[features]
default = ["winit-eventloop-2"]
winit-eventloop-2 = [] # configures the winit_surface_descriptor macro

#[patch.crates-io]
#ash = { git = "https://github.com/MaikKlein/ash.git", rev = "6d7e4bf" }
# vk-mem = { path = "../vk-mem-rs" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
#winit = { git = "https://github.com/rust-windowing/winit.git", rev = "0636483" } # branch = "eventloop-2.0"
# winit = "=0.20.0-alpha4"
winit = "0.22"
# winit = { path = "../winit" }
glfw = "0.37.0"
num-traits = "0.2.11"
cgmath = "0.17.0"
image = "0.23.3"
rand = "0.7.3" # note: only used directly by the particle simulator
memoffset = "0.5.4"
gltf = { version  = "0.15.2", features = ["utils", "import", "names"] }

spng = { version = "=0.1.0-alpha.3" }

[patch.crates-io]
#gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "f489c26cbb7fad7a790972738f8c9771dc9a09b7" }
#typed-arena = { path = "../rust-typed-arena" }

[profile.dev.package."*"]
opt-level = 1
